--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <ul>
         <li><a href="cal.html">Calculette</a></li>
         <li><a href="con.html">Convertisseur</a></li>
-        <li><a href="#">Projets</a></li>
+        <li><a href="#">IA en attente...</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
