--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       background-color: #8bc6ec; /* Bleu clair */
       display: flex;
       min-height: 100vh;
+      flex-direction: column; /* Pour placer le footer en bas */
     }
     .sidebar {
       background-color: rgb(76, 99, 175); /* Bleu */
@@ -24,6 +25,7 @@
       max-width: 1200px;
       margin: auto;
       padding: 20px;
+      flex: 1; /* Pour pousser le footer vers le bas */
     }
     nav, article {
       background-color: #8bc6ec; /* Bleu clair légèrement plus foncé */
@@ -95,5 +97,3 @@
   </footer>
 </body>
 </html>
-
-
