--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       color: white;
       padding: 20px;
       width: 200px;
+      flex-shrink: 0; /* Empêche le sidebar de rétrécir */
     }
     .container {
       max-width: 1200px;
@@ -99,3 +100,4 @@
   </footer>
 </body>
 </html>
+
