--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       color: white;
       padding: 20px;
       width: 200px;
+      height: 100%; 
     }
     <!DOCTYPE html>
 <html lang="fr">
