--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       color: white;
       padding: 20px;
       width: 200px;
-      height: 100%; 
+      height: 100vh; 
     }
     <!DOCTYPE html>
 <html lang="fr">
