--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       color: white;
       padding: 20px;
       width: 200px;
-      flex-shrink: 0; /* Empêche le sidebar de rétrécir */
+      height: 100vh; /* Empêche le sidebar de rétrécir */
     }
     .sidebar h2 {
       font-size: 40px; /* Modifier la taille de la police */
