--- a/index.html
+++ b/index.html
@@ -7,30 +7,33 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet">
   <style>
     body {
-      font-family: 'Open Sans Condensed', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #8bc6ec; /* Bleu clair */
-      display: flex;
-      flex-direction: column;
-      min-height: 20vh;
-    }
-    .sidebar {
-      background-color: rgb(76, 99, 175); /* Bleu */
-      color: white;
-      padding: 20px;
-      width: 200px;
-      height: 100vh; /* Empêche le sidebar de rétrécir */
-    }
-    .sidebar h2 {
-      font-size: 40px; /* Modifier la taille de la police */
-    }
-    .container {
-      max-width: 1200px;
-      margin: auto;
-      padding: 20px;
-      flex: 1;
-    }
+  font-family: 'Open Sans Condensed', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #8bc6ec; /* Bleu clair */
+  display: flex;
+  flex-direction: row; /* Changement de la direction en ligne */
+}
+
+.sidebar {
+  background-color: rgb(76, 99, 175); /* Bleu */
+  color: white;
+  padding: 20px;
+  width: 200px;
+  height: 100vh; /* Empêche le sidebar de rétrécir */
+}
+
+.sidebar h2 {
+  font-size: 40px; /* Modifier la taille de la police */
+}
+
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 20px;
+  flex: 1;
+}
+
     nav, article {
       background-color: #8bc6ec; /* Bleu clair légèrement plus foncé */
       padding: 20px;
