--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
       color: blue;
     }
     footer {
-      text-align: center;
+      text-align: center; /* Centre le texte horizontalement */
       padding: 20px;
-      align-self: center; /* Centre le footer horizontalement */
       margin-top: auto; /* Place le footer en bas */
     }
     .header h2 {
