--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
   display: flex;
   flex-direction: row; /* Changement de la direction en ligne */
 }
-
-.sidebar {
+    <header>
+  <img src="tout en 1.png" alt="Logo ToutEn1">
+  <h1>ToutEn1</h1>
+  <p class="subheader">Votre boîte à outils numérique ultime</p>
+</header>
+  .sidebar {
   background-color: rgb(76, 99, 175); /* Bleu */
   color: white;
   padding: 20px;
