--- a/gen.html
+++ b/gen.html
@@ -8,6 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
+            background-color: #8bc6ec;
         }
         #password {
             margin: 20px auto;
