--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h2>ToutEn1</h2>
     <nav>
       <ul>
-        <li><a href="gen.html">Generateu de mot de passe</a></li>
+        <li><a href="gen.html">Generateur de mot de passe</a></li>
         <li><a href="cal.html">Calculette</a></li>
         <li><a href="con.html">Convertisseur</a></li>
         <li><a href="#">IA en attente...</a></li>
