--- a/gen.html
+++ b/gen.html
@@ -9,6 +9,11 @@
             font-family: Arial, sans-serif;
             text-align: center;
             background-color: #8bc6ec;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
         #password {
             margin: 20px auto;
@@ -54,5 +59,8 @@
             document.getElementById("password").textContent = password;
         }
     </script>
+</body>
+</html>
+
 </body>
 </html>
