--- a/gen.html
+++ b/gen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password Generator</title>
+    <title>Génerateur de mot de passe</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -44,13 +44,15 @@
 <body>
     <div id="container">
         <h2>Password Generator</h2>
+        <label for="length">Password Length:</label>
+        <input type="number" id="length" min="1" max="50" value="12">
         <div id="password"></div>
-        <button id="generateBtn" onclick="generatePassword()">Generate Password</button>
+        <button id="generateBtn" onclick="Génerer un mot de passe()">Generate Password</button>
     </div>
 
     <script>
         function generatePassword() {
-            var length = 12; // Change the length of the generated password here
+            var length = document.getElementById("length").value;
             var charset = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&*()_+{}[]|:;<>,.?/~"; // Define the character set for the password
 
             var password = "";
