--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <li><a href="gen.html">Generateur de mot de passe</a></li>
         <li><a href="cal.html">Calculette</a></li>
         <li><a href="con.html">Convertisseur</a></li>
-        <li><a href="#">IA en attente...</a></li>
+        <li><a href="https://chat.openai.com/">IA en attente...</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
