--- a/gen.html
+++ b/gen.html
@@ -43,11 +43,11 @@
 </head>
 <body>
     <div id="container">
-        <h2>Password Generator</h2>
-        <label for="length">Password Length:</label>
+        <h2>Génerateur de mot de passe</h2>
+        <label for="length">Taille que vous souhaitez:</label>
         <input type="number" id="length" min="1" max="50" value="12">
         <div id="password"></div>
-        <button id="generateBtn" onclick="Génerer un mot de passe()">Generate Password</button>
+        <button id="generateBtn" onclick="GgeneratePassword()">Génerer un mot de passe</button>
     </div>
 
     <script>
