--- a/gen.html
+++ b/gen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Génerateur de mot de passe</title>
+    <title>Générateur de mot de passe</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,11 +43,11 @@
 </head>
 <body>
     <div id="container">
-        <h2>Génerateur de mot de passe</h2>
+        <h2>Générateur de mot de passe</h2>
         <label for="length">Taille que vous souhaitez:</label>
         <input type="number" id="length" min="1" max="50" value="12">
         <div id="password"></div>
-        <button id="generateBtn" onclick="GgeneratePassword()">Génerer un mot de passe</button>
+        <button id="generateBtn" onclick="generatePassword()">Générer un mot de passe</button>
     </div>
 
     <script>
