--- a/qr.html
+++ b/qr.html
@@ -48,15 +48,19 @@
 
     <script>
         function generateQRCode() {
-            var input = document.getElementById("input").value;
-            var qrcode = new QRCode(document.getElementById("qrcode"), {
-                text: input,
-                width: 256,
-                height: 256,
-                colorDark: "#000000",
-                colorLight: "#ffffff",
-                correctLevel: QRCode.CorrectLevel.H
-            });
+            if (typeof QRCode !== 'undefined') {
+                var input = document.getElementById("input").value;
+                var qrcode = new QRCode(document.getElementById("qrcode"), {
+                    text: input,
+                    width: 256,
+                    height: 256,
+                    colorDark: "#000000",
+                    colorLight: "#ffffff",
+                    correctLevel: QRCode.CorrectLevel.H
+                });
+            } else {
+                console.error("QRCode.js is not loaded properly.");
+            }
         }
     </script>
 </body>
