--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h2>ToutEn1</h2>
     <nav>
       <ul>
-        <li><a href="qr.html">Generateur de qr code</a></li>
+        <li><a href="https://youcefm2002.github.io/tes/">Generateur de qr code</a></li>
         <li><a href="gen.html">Generateur de mot de passe</a></li>
         <li><a href="cal.html">Calculette</a></li>
         <li><a href="con.html">Convertisseur</a></li>
