--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   font-family: 'Open Sans Condensed', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #8bc6ec; /* Bleu clair */
+  background-color: #FFF; /* Bleu clair */
   display: flex;
   flex-direction: row; /* Changement de la direction en ligne */
 }
  
   .sidebar {
-  background-color: rgb(76, 99, 175); /* Bleu */
+  background-color: #262a2f; /* Bleu */
   color: white;
   padding: 20px;
   width: 200px;
