--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       text-decoration: underline;
     }
     h1, h2, h3 {
-      color: blue;
+      color: #FFF;
     }
     footer {
       text-align: center; /* Centre le texte horizontalement */
