--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   font-family: 'Open Sans Condensed', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #FFF; /* Bleu clair */
+  background-color: #FFF; 
   display: flex;
   flex-direction: row; /* Changement de la direction en ligne */
 }
@@ -25,6 +25,7 @@
 
 .sidebar h2 {
   font-size: 40px; /* Modifier la taille de la police */
+  
 }
 
 .container {
@@ -35,7 +36,7 @@
 }
 
     nav, article {
-      background-color: #8bc6ec; /* Bleu clair légèrement plus foncé */
+      background-color: #FFF; /* Bleu clair légèrement plus foncé */
       padding: 20px;
       border-radius: 10px;
       flex: 1;
@@ -56,7 +57,7 @@
       text-decoration: underline;
     }
     h1, h2, h3 {
-      color: #FFF;
+      color: #262a2f;
     }
     footer {
       text-align: center; /* Centre le texte horizontalement */
