--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
   flex: 1;
 }
 
-    nav, article {
+     article {
       background-color: #FFF; /* Bleu clair légèrement plus foncé */
       padding: 20px;
       border-radius: 10px;
       flex: 1;
+    }
+    nav {
+      background: #494eea;
     }
     nav ul {
       list-style: none;
