--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <p>© 2050 Touten1 - Fait par Youcef, Mohamed et Haroun pour le projet L1 d'informatique.</p>
   </footer>
 
-  <button id="toggleButton">Ouvrir le sidebar</button>
+  <button id="toggleButton">Toutes</button>
 
   <script src="script.js"></script>
 </body> 
