--- a/gen.html
+++ b/gen.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #8bc6ec;
+            background-color: #262a2f;
         }
         #container {
             position: absolute;
