--- a/gen.html
+++ b/gen.html
@@ -17,13 +17,15 @@
             transform: translate(-50%, -50%);
         }
         #password {
-            margin: 20px auto;
-            padding: 10px;
-            width: 300px;
-            font-size: 18px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: #f9f9f9;
+             width: 100%;
+             height: 50px;
+        border: 1px solid #494eea;
+        outline: 0;
+        padding: 10px;
+        margin: 10px 0 20px;
+        border-radius: 5px;
+        color: #262a2f;
+        background: #fff;
         }
         #generateBtn {
             display: inline-block;
