--- a/gen.html
+++ b/gen.html
@@ -26,6 +26,7 @@
             border-radius: 5px;
             color: #262a2f;
             background: #fff;
+            font-size: 30px;
         }
         #generateBtn {
             display: inline-block;
