--- a/gen.html
+++ b/gen.html
@@ -11,10 +11,13 @@
             background-color: #262a2f;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            position: relative; /* Ajout */
+        }
+        #container {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
         }
         #password {
             width: 100%;
@@ -26,9 +29,10 @@
             border-radius: 5px;
             color: #262a2f;
             background: #fff;
-            font-size: 24px; /* Réduit la taille de la police */
+            font-size: 30px;
         }
         #generateBtn {
+            display: inline-block;
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
@@ -41,10 +45,18 @@
         #generateBtn:hover {
             background-color: #0056b3;
         }
+        .site-name { /* Ajout */
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            font-size: 24px;
+            color: white;
+        }
     </style>
 </head>
 <body>
-    <div>
+    <div class="site-name">ToutEn1</div> <!-- Ajout -->
+    <div id="container">
         <h2>Générateur de mot de passe</h2>
         <label for="length">Taille que vous souhaitez:</label>
         <input type="number" id="length" min="1" max="50" value="12">
@@ -55,7 +67,7 @@
     <script>
         function generatePassword() {
             var length = document.getElementById("length").value;
-            var charset = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&*()_+{}[]|:;<>,.?/~"; // Définir l'ensemble de caractères pour le mot de passe
+            var charset = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&*()_+{}[]|:;<>,.?/~"; // Define the character set for the password
 
             var password = "";
             for (var i = 0; i < length; i++) {
@@ -68,4 +80,3 @@
     </script>
 </body>
 </html>
-
