--- a/gen.html
+++ b/gen.html
@@ -41,9 +41,19 @@
         #generateBtn:hover {
             background-color: #0056b3;
         }
+        .site-name {
+            font-size: 24px; /* Taille de la police */
+            font-weight: bold; /* Poids de la police */
+            color: #FFF; 
+            position: absolute; /* Position absolue pour le placer dans le coin supérieur gauche */
+            top: 10px; /* Distance du haut */
+            left: 10px; /* Distance de la gauche */
+        }
+
     </style>
 </head>
 <body>
+    <div class="site-name">ToutEn1</div>
     <div>
         <h2>Générateur de mot de passe</h2>
         <label for="length">Taille que vous souhaitez:</label>
