--- a/cal.html
+++ b/cal.html
@@ -67,7 +67,7 @@
     </style>
 </head>
 <body>
-    <div class="header">ToutEn1</div>
+    <div class="site-name">ToutEn1</div>
     <div class="subheader">Ma Super Calculatrice</div>
     <div class="calculator">
         <input type="text" id="result" readonly>
