--- a/cal.html
+++ b/cal.html
@@ -15,12 +15,14 @@
             align-items: center;
             height: 100vh;
         }
-        .header {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            color: blue;
-            font-size: 24px;
+        .site-name {
+            font-size: 24px; /* Taille de la police */
+            font-weight: bold; /* Poids de la police */
+            color: #FFF; 
+            position: absolute; /* Position absolue pour le placer dans le coin supérieur gauche */
+            top: 10px; /* Distance du haut */
+            left: 10px; /* Distance de la gauche */
+        }
         }
         .subheader {
             color: red;
