--- a/conv.html
+++ b/conv.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f1f1f1;
+            background-color: #262a2f;
             margin: 0;
             padding: 0;
             display: flex;
