--- a/gen.html
+++ b/gen.html
@@ -16,6 +16,17 @@
             align-items: center;
             height: 100vh;
         }
+        .container {
+            width: 400px;
+            padding: 25px 35px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: #FFF;
+        border-radius: 10px;
+        }
+
         #password {
             width: 100%;
             height: 50px;
