--- a/gen.html
+++ b/gen.html
@@ -65,7 +65,9 @@
 </head>
 <body>
     <div class="site-name">ToutEn1</div>
-    <div>
+    
+    <div class="container">
+
         <h2>Générateur de mot de passe</h2>
         <label for="length">Taille que vous souhaitez:</label>
         <input type="number" id="length" min="1" max="50" value="12">
