--- a/gen.html
+++ b/gen.html
@@ -12,20 +12,20 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-direction: column; /* Centre le contenu verticalement */
+            justify-content: center; /* Centre le contenu verticalement */
             height: 100vh;
         }
+
         .container {
             width: 400px;
             padding: 25px 40px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             background: #FFF;
-        border-radius: 10px;
+            border-radius: 10px;
         }
+
+
+
 
         #password {
             width: 100%;
