--- a/gen.html
+++ b/gen.html
@@ -12,18 +12,20 @@
             margin: 0;
             padding: 0;
             display: flex;
-            flex-direction: column; /* Centre le contenu verticalement */
-            justify-content: center; /* Centre le contenu verticalement */
+            justify-content: center;
+            align-items: center;
             height: 100vh;
         }
-
         .container {
             width: 400px;
             padding: 25px 40px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             background: #FFF;
-            border-radius: 10px;
+        border-radius: 10px;
         }
-
 
 
 
