--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,14 @@
             margin: 0;
             padding: 0;
         }
+        .site-name {
+            font-size: 24px; /* Taille de la police */
+            font-weight: bold; /* Poids de la police */
+            color: #FFF; 
+            position: absolute; /* Position absolue pour le placer dans le coin supérieur gauche */
+            top: 10px; /* Distance du haut */
+            left: 10px; /* Distance de la gauche */
+        }
         .container {
             width: 80%;
             margin: 0 auto;
