--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,8 @@
     </style>
 </head>
 <body>
+    <div class="site-name">ToutEn1</div>
+    
     <div class="container">
         <div class="member">
             <h2>Youcef Malek</h2>
