--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             margin-bottom: 20px;
         }
         .member h2 {
-            color: blue;
+            color: #262a2f;
         }
         .member p {
             font-size: 16px;
@@ -54,7 +54,7 @@
             <p>Email : cissokhomohamed23@gmail.com</p>
         </div>
         <div class="member">
-            <h2>Haroun</h2>
+            <h2>Haroun Arab</h2>
             <p>Poste : développeur</p>
             <p>Email : harioun01@gmail.com</p>
         </div>
